# SHIEP-Pipeline-Plus

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build-release.yml
crates/ec-cli/: Cargo.toml
crates/ec-cli/src/: main.rs
crates/ec-core/: Cargo.toml
crates/ec-core/src/: app.rs  auth.rs  config.rs  dns_resolver.rs  endpoint.rs  error.rs  lib.rs  netstack.rs  netstack_device.rs  output.rs  protocol.rs  protocol_session.rs  protocol_wire.rs  route_table.rs  routing.rs  socks.rs  socks_proxy.rs  socks_wire.rs  tls.rs  token.rs  transport.rs
docs/superpowers/plans/: 2026-07-06-upstream-v2-plus-migration.md
docs/superpowers/specs/: 2026-07-06-upstream-v2-plus-migration-design.md
