[package]
name = "ec-core"
version = "0.1.0"
edition = "2024"

[dependencies]
foreign-types = "0.3.2"
hex = "0.4.3"
openssl = "0.10.75"
openssl-sys = "0.9.111"
regex = "1.12.3"
reqwest = { version = "0.13.2", default-features = false, features = ["blocking", "rustls"] }
rsa = "0.9.10"
thiserror = "2.0.18"
urlencoding = "2.1.3"
