[package]
name = "ec-core"
version = "0.1.0"
edition = "2024"

[dependencies]
anstream = "0.6.21"
anstyle = "1.0.13"
chrono = "0.4.44"
foreign-types = "0.3.2"
hex = "0.4.3"
openssl = "0.10.75"
openssl-sys = "0.9.111"
quick-xml = "0.39.2"
reqwest = { version = "0.13.2", default-features = false, features = ["blocking", "rustls"] }
rsa = "0.9.10"
smoltcp = { version = "0.12.0", default-features = false, features = ["std", "proto-ipv4", "socket", "socket-tcp", "medium-ip", "alloc"] }
thiserror = "2.0.18"
urlencoding = "2.1.3"
